# EmbeddedUnifiedBackendServiceArchitecture

./: .gitignore  CMakeLists.txt  NeedsAnalysis  SystemArchitectureDesign  TaskPlanning  regression.sh
config/: app_config.cfg
include/: app_config.h  conn.h  event.h  logger.h  lua_vm.h  mpsc_queue.h  protocol.h  runtime.h  tasks.h
scripts/: main.lua
src/: CMakeLists.txt  app_config.cpp  conn.cpp  logger.cpp  lua_vm.cpp  main.cpp  protocol.cpp  runtime.cpp
tests/: CMakeLists.txt  test_app_config.cpp  test_lua_basic.cpp  test_mpsc_queue.cpp  test_rtp_recording_tests.cpp
